# 3_sem_21_22

./: .gitignore  README.md
task1/: task1.txt
task1/examples/: 10_exec_pipes.c
task1/shell-wrapper/: CMakeLists.txt  main.c
task1/shell-wrapper/include/: sw_main.h  sw_parse.h  sw_run.h
task1/shell-wrapper/src/: sw_main.c  sw_parse.c  sw_run.c
task2/: task2.txt
task2/duplex-pipe/: CMakeLists.txt
task2/duplex-pipe/include/: dp_main.h  dp_pipe.h  dp_string.h
task2/duplex-pipe/src/: dp_main.c  dp_pipe.c  dp_string.c
task2/examples/: 2_task_2_struct.c
task3/: Processing of results.ods  execution-time.txt
task3/FIFO/: CMakeLists.txt
task3/FIFO/include/: fifo_client.h  fifo_main.h  fifo_server.h
task3/FIFO/src/: fifo_client.c  fifo_main.c  fifo_server.c
task3/examples/: mmap_parent_child.c  mq_client.c  mq_server.c  receiver.c  task3.txt
task3/msg-queue-SYSV/: CMakeLists.txt
task3/msg-queue-SYSV/include/: mq_main.h
task3/msg-queue-SYSV/src/: mq_main.c
task3/shr-mem-SYSV/: CMakeLists.txt
task3/shr-mem-SYSV/include/: sm_main.h  sm_sem.h
task3/shr-mem-SYSV/src/: sm_main.c  sm_sem.c
task4/: task.txt
task4/examples/: 3_set_phread_affinity.c
task4/integral-mk/: CMakeLists.txt
task4/integral-mk/include/: mk_main.h
task4/integral-mk/src/: mk_main.c
task4/integral-mk/test/: results.ods  results.txt
task5/: task.txt
task5/sig-transf/: CMakeLists.txt
task5/sig-transf/include/: st_main.h
task5/sig-transf/src/: st_main.c
task6/: task.txt
task6/examples/: 3_brk_1.c  3_listdir_recursively.c  4_M_MMAP_THRESHOLD.c  5_listdir_recursively.c  6_get_diff_2_files.c  7_how_to_write_daemon.txt  8_daemon_template.c  8_prctl_set_subreaper.c
task6/sys-service/: CMakeLists.txt
task6/sys-service/include/: ss_config.h  ss_error.h  ss_log.h  ss_main.h  ss_start.h
task6/sys-service/src/: ss_config.c  ss_error.c  ss_log.c  ss_main.c  ss_start.c
task7/: 1_select.c  adv_disadv.txt
task7/examples/: 2_poll.c  3_epoll.c
task7/multiplex-io/client/: CMakeLists.txt
task7/multiplex-io/client/include/: cn_interact.h  cn_main.h
task7/multiplex-io/client/src/: cn_interact.c  cn_main.c
task7/multiplex-io/server/: CMakeLists.txt
task7/multiplex-io/server/channels/: server_pub
task7/multiplex-io/server/include/: s_interact.h  s_main.h
task7/multiplex-io/server/src/: backup-s_reg_client()  s_interact.c  s_main.c
